Mojmap-ify tag entry removal.